cloudformation/ec2.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Single machine in autoscaling 1:1 for simple test and simple purpose
Parameters:
  VpcId:
    Type: String
  SubnetIdA:
    Type: String
  SubnetIdB:
    Type: String
  InstanceName:
    Type: String
  SshCidrAllow:
    Type: String
    Description: IP Address to allow ssh
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.medium
    AllowedValues:
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
    - t2.large
    - m4.large
    - m4.xlarge
    - m4.2xlarge
    - m4.4xlarge
    - m4.10xlarge
    - m3.medium
    - m3.large
    - m3.xlarge
    - m3.2xlarge
    - c4.large
    - c4.xlarge
    - c4.2xlarge
    - c4.4xlarge
    - c4.8xlarge
    - c3.large
    - c3.xlarge
    - c3.2xlarge
    - c3.4xlarge
    - c3.8xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  AMIid:
    Description: AMI id of silver discourse image
    Type: AWS::EC2::Image::Id
  DBInstanceType:
    Description: RDS database instance
    Type: String
  DBPassword:
    Description: Password for database
    Type: String
    NoEcho: true
  CertificateARN:
    Type: String
    Description: Certificate ARN to associate with load balancer
Resources:

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - Ref: InstanceIAMRole
  InstanceIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
      Policies:
      - PolicyName: s3
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - s3:*
            Resource:
            - Fn::Join:
              - ''
              - - 'arn:aws:s3:::'
                - "*"
      - PolicyName: logs
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - logs:CreateLogGroup
            - logs:CreateLogStream
            - logs:PutLogEvents
            - logs:DescribeLogStreams
            Resource:
            - arn:aws:logs:*:*:*
      - PolicyName: route53
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - route53:ChangeResourceRecordSets
            Resource: '*'
      - PolicyName: metrics
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - cloudwatch:PutMetricData
            - cloudwatch:GetMetricStatistics
            - cloudwatch:ListMetrics
            Resource:
            - '*'

#Load Balancing section
  DiscourseElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: discourse-ALB
      SecurityGroups:
      - !Ref LoadBalancerWebServerGroup
      Subnets:
        - !Ref SubnetIdA
        - !Ref SubnetIdB
  WebServerListenersHTTP:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref DiscourseElasticLoadBalancer
      Port: '80'
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGrougDiscourse
  WebServerListenersHTTPS:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref DiscourseElasticLoadBalancer
      Port: '443'
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref CertificateARN
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGrougDiscourse
  ElasticLoadBalancerInternalListener:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn:
          !Ref TargetGrougDiscourse
      Conditions:
      - Field: path-pattern
        Values:
        - "/*"
      ListenerArn:
        !Ref WebServerListenersHTTP
      Priority: 1
  LoadBalancerWebServerGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP and HTTPS access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp: 0.0.0.0/0
  TargetGrougDiscourse:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      UnhealthyThresholdCount: 3
      HealthCheckPath: "/login"
      HealthCheckPort: '80'
      Name: discourse-targetgroup
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VpcId

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: 1
    Properties:
      Tags:
      - Key: Name
        Value:
          !Ref InstanceName
        PropagateAtLaunch: 'true'
      LaunchConfigurationName:
        Ref: LaunchConfiguration
      MinSize: 1
      MaxSize: 1
      VPCZoneIdentifier:
        - !Ref SubnetIdA
      TargetGroupARNs:
        - !Ref TargetGrougDiscourse
  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      IamInstanceProfile: !Ref InstanceProfile
      KeyName:
        Ref: KeyName
      ImageId: !Ref AMIid
      SecurityGroups:
        - Ref: InstanceSecurityGroup
        - Ref: SSHSecurityGroup
      InstanceType:
        Ref: InstanceType
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -x
            echo ok >> /tmp/ok
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        !Ref VpcId
      GroupDescription: Enable HTTP and HTTPS
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        SourceSecurityGroupId: !Ref LoadBalancerWebServerGroup
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        SourceSecurityGroupId: !Ref LoadBalancerWebServerGroup

  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        !Ref VpcId
      GroupDescription: Enable SSH access and HTTP from the load balancer only
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp:
          Ref: SshCidrAllow

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Subnet for RDS"
      SubnetIds:
        - !Ref SubnetIdA
        - !Ref SubnetIdB
  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for RDS"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '5432'
        ToPort: '5432'
        SourceSecurityGroupId: !Ref InstanceSecurityGroup
  PostgresRDS: 
    Type: "AWS::RDS::DBInstance"
    DeletionPolicy : "Retain"
    Properties: 
      DBInstanceIdentifier: discourse
      AllocatedStorage: "10"
      DBInstanceClass: !Ref DBInstanceType
      Engine: "postgres"
      EngineVersion: "9.5.6"
      MasterUsername: discourse
      MasterUserPassword: !Ref DBPassword
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref DBSecurityGroup

#Route53
  PostgresRDSdns:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: xpeppers.com.
      TTL: 300
      Name: discoursedb.xpeppers.com.
      Type: CNAME
      ResourceRecords:
        - !GetAtt PostgresRDS.Endpoint.Address
  LoadBalancerDNS:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: xpeppers.com.
      Name: newdiscourse.xpeppers.com.
      Type: A
      AliasTarget:
        DNSName:
          Fn::GetAtt:
            - DiscourseElasticLoadBalancer
            - DNSName
        HostedZoneId:
          Fn::GetAtt:
            - DiscourseElasticLoadBalancer
            - CanonicalHostedZoneID
  LoadBalancerDNSUfficial:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: xpeppers.com.
      Name: discourse.xpeppers.com.
      Type: A
      AliasTarget:
        DNSName:
          Fn::GetAtt:
            - DiscourseElasticLoadBalancer
            - DNSName
        HostedZoneId:
          Fn::GetAtt:
            - DiscourseElasticLoadBalancer
            - CanonicalHostedZoneID

Outputs:
  InstanceSecurityGroup:
    Description: Security group ec2
    Value:
      Fn::GetAtt:
      - InstanceSecurityGroup
      - GroupId
